--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>First Test - home </title>
+<title>First Test - home</title>
 </head>
 
 <body>
-<h1>First Test</h1>
-<h2>Welcome to the website!</h2>
-<p>This is a <strong>chunk of text</strong> in a paragraph</p>
-<p>This is another paragraph</p>
+<div id="header">
+  <h1>First Test</h1>
+</div>
+<div id="content">
+  <h2>Welcome to the website!</h2>
+  <p>This is a <strong>chunk of text</strong> in a paragraph</p>
+  <p><em>Text</em> in the <strong>middle</strong></p>
+  <h2>Here is some more information</h2>
+  <p>This is another paragraph</p>
+</div>
+<div id="footer">
+  <p>Click <a href="http://google.com">here</a> to open google</p>
+  <p><img src="http://lorempixel.com/300/200" /></p>
+</div>
 </body>
 </html>
